Fix horizontal scrolling

--- a/wp-content/themes/madera-makers/assets/styles/common/_global.scss
+++ b/wp-content/themes/madera-makers/assets/styles/common/_global.scss
@@ -236,6 +236,10 @@ h2 {
   font-size: $font-size-medium;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .wpcf7-form {
   label {
     width: 100%
